# FineFoundry

./: .coverage  .gitignore  README.md  anthropic_rejects.py  anthropic_rejects_history_sample.json  chat_log.txt  ollama_config.json  out_chatml_pretty.jsonl  proxy_test.py  pyproject.toml  reddit.py  requirements.txt  ruff.toml  run_finefoundry.sh  run_trainer.ps1  scraped_training_data.json  synthetic_data_kit_config.yaml  test.py  trainer.py
.github/workflows/: ci.yml  release.yml
data/final/: A Layered Protocol Architecture for the Internet of Agents_0_qa_pairs_ft.json  A Layered Protocol Architecture for the Internet of Agents_1_qa_pairs_ft.json  A Layered Protocol Architecture for the Internet of Agents_2_qa_pairs_ft.json  A Layered Protocol Architecture for the Internet of Agents_3_qa_pairs_ft.json  A Layered Protocol Architecture for the Internet of Agents_4_qa_pairs_ft.json
data/output/: 10615_Gated_Attention_for_Larg.txt  A Layered Protocol Architecture for the Internet of Agents.txt  A Layered Protocol Architecture for the Internet of Agents_0.txt  A Layered Protocol Architecture for the Internet of Agents_1.txt  A Layered Protocol Architecture for the Internet of Agents_10.txt  A Layered Protocol Architecture for the Internet of Agents_11.txt  A Layered Protocol Architecture for the Internet of Agents_12.txt  A Layered Protocol Architecture for the Internet of Agents_2.txt  A Layered Protocol Architecture for the Internet of Agents_3.txt  A Layered Protocol Architecture for the Internet of Agents_4.txt  A Layered Protocol Architecture for the Internet of Agents_5.txt  A Layered Protocol Architecture for the Internet of Agents_6.txt  A Layered Protocol Architecture for the Internet of Agents_7.txt  A Layered Protocol Architecture for the Internet of Agents_8.txt  A Layered Protocol Architecture for the Internet of Agents_9.txt  DeepSeek-V3.2_Pushing the Frontier of Open.txt  RAG-knowlege-base-ai-paper.txt  synth_logs.txt
docs/: README.md
docs/api/: dataset-builder.md  fourchan-scraper.md  reddit-scraper.md  scrapers.md  stackexchange-scraper.md  training.md
docs/deployment/: docker.md  proxy-setup.md  runpod.md
docs/development/: code-style.md  contributing.md  database.md  faq.md  logging.md  project-structure.md  testing.md
docs/user-guide/: analysis-tab.md  authentication.md  build-publish-tab.md  cli-usage.md  ethical-legal.md  evaluate-tab.md  faq.md  gui-overview.md  inference-tab.md  installation.md  merge-tab.md  quick-start.md  scrape-tab.md  settings-tab.md  training-tab.md  troubleshooting.md  upgrade-notes.md
examples/: synthetic_config.yaml
hf_dataset/train/: data-00000-of-00001.arrow  state.json
hf_dataset/validation/: data-00000-of-00001.arrow  state.json
idea/: main.py  save_dataset.py
scripts/: pretty_jsonl.py
src/: ensure_infra.py  main.py  runpod_pod.py  save_dataset.py  scraper.py  stackexchange_scraper.py  synthetic_cli.py
src/db/: __init__.py  (+8 more)
tests/: conftest.py
(+120 files in other folders)
